# PasswordManager

./: .gitignore  BUILD_LOG.md  CLAUDE.md  README.md  pyproject.toml
src/password_manager/: cli.py  crypto.py  db.py  vault.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_db.py  test_vault.py
